# curso-ink

./: .gitignore  Cargo.toml  README.md  build  build.sh  lib.rs
builds/: nft.contract  nft.json  nft.wasm  organization.contract  organization.json  organization.wasm
contracts/nft/: Cargo.toml  lib.rs
contracts/organization/: Cargo.toml  errors.rs  lib.rs  tools.rs  types.rs  voting.rs
