[package]
name = "organization"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
authors = ["Schmidt Cristian Hernán <schcriher@gmail.com>"]
repository = "https://github.com/schcriher/curso-ink"
rust-version = "1.69"

[dependencies]
ink = { version = "4.2.0", default-features = false }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.6", default-features = false, features = ["derive"], optional = true }

[dev-dependencies]
ink_e2e = "4.2.0"

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
]
ink-as-dependency = []
e2e-tests = []
